--- a/src/app/dashboard/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboard/layouts/dashboard-layout/dashboard-layout.component.html
@@ -6,5 +6,6 @@
 
 <br>
 
-<button routerLink="/auth/login">Ir a Login</button>
+<!-- <button routerLink="/auth/login">Ir a Login</button> -->
+<button (click)="onLogout()">Cerrar sesión</button>
 
