--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,1 +1,59 @@
-<p>register-page works!</p>
+<form [formGroup]="myForm"
+      class="login100-form"
+      (ngSubmit)="register()"
+      autocomplete="off">
+
+    <span class="login100-form-title p-b-49">
+        Register
+    </span>
+
+    <div class="wrap-input100 m-b-23">
+        <span class="label-input100">Nombre</span>
+        <input class="input100"
+               type="name"
+               formControlName="name"
+               placeholder="Nombre">
+        <span class="focus-input100"></span>
+    </div>
+
+    <div class="wrap-input100 m-b-23">
+        <span class="label-input100">Correo</span>
+        <input class="input100"
+               type="email"
+               formControlName="email"
+               placeholder="Correo electrónico">
+        <span class="focus-input100"></span>
+    </div>
+
+    <div class="wrap-input100">
+        <span class="label-input100">Contraseña</span>
+        <input class="input100"
+               type="password"
+               formControlName="password"
+               placeholder="Ingrese su contraseña">
+        <span class="focus-input100"></span>
+    </div>
+
+    <div class="text-right p-t-8 p-b-31"></div>
+
+    <div class="container-login100-form-btn">
+        <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn"
+            [disabled]="myForm.invalid"
+                    type="submit">
+                Register
+            </button>
+        </div>
+    </div>
+
+    <div class="flex-col-c p-t-60">
+        <span class="txt1 p-b-17">
+            ¿No tienes cuenta?
+        </span>
+
+        <a routerLink="/auth/login" class="txt2">
+            Iniciar sesión
+        </a>
+    </div>
+</form>
